--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://192.168.99.100:32768/ekip
+spring.datasource.url = jdbc:mysql://192.168.99.100:32769/ekip
 spring.datasource.username = root
 spring.datasource.password = secret
 spring.datasource.testWhileIdle = true
@@ -23,6 +23,10 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
 
+logging.level.org.springframework.web=INFO
+logging.level.guru.springframework.controllers=DEBUG
+logging.level.org.hibernate=ERROR
+logging.file=logs/spring-boot-logging.log
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
